<resources>
    <string name="app_name">CovidPassport</string>

    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="secret_key">Secret key</string>
    <string name="embed_text">Embed text</string>
    <string name="title">Title</string>
    <string name="ok">OK</string>

    <string name="static_image">static_image</string>
    <string name="extract_text">Extract Text</string>
    <string name="select_image">Select image</string>
    <string name="choose_import_method">Please choose a method to import an image</string>
    <string name="home">Home</string>
    <string name="wrong_key">Wrong secret key</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="login">Login</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="welcome_to_covidpassport">Welcome to Covid passport!</string>
    <string name="registration">Registration</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="personal_id_nr">Personal ID number</string>
    <string name="id_card_nr">ID card number</string>
    <string name="address">Address</string>
    <string name="register">Register</string>
    <string name="tap_anywhere_to_load_picture">Tap anywhere to load picture</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_certifcate">Delete certificate</string>
    <string name="are_you_sure_delete_certificate">Are you sure you want to delete this certificate?</string>
    <string name="tap_to_add_profile_picture">Tap to add profile picture</string>
    <string name="signout">Sign Out</string>
    <string name="update">Update</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="profile">Profile</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="are_you_sure_delete_profile">Are you sure you want to delete your profile?</string>
    <string name="are_you_sure_delete_user">Are you sure you want to delete this user?</string>
    <string name="chats">Chats</string>
    <string name="loading">Loading...</string>
    <string name="no_certificates">No certificates \n\n Tap + to add</string>
    <string name="say_hi">Say Hi!</string>
    <string name="write">Write...</string>
    <string name="upload_proof">Upload proof</string>
    <string name="upload_id">Upload ID</string>
    <string name="id">ID</string>
    <string name="proof_doc">Proof Document</string>
    <string name="doc_name">Document name</string>
    <string name="type">Type</string>
    <string name="date">Date</string>
    <string name="age">Age</string>
    <string name="center_name">Center name</string>
    <string name="doc_serial_nr">Document serial number</string>
    <string name="details">Details</string>
    <string name="files">Files</string>
    <string name="done">Done</string>
    <string name="exit">Exit</string>
    <string name="certificate">Certificate</string>
    <string name="certificates">Certificates</string>
    <string name="show_qr">Show QR Code</string>
    <string name="select_access_mode">Select Access Mode</string>
    <string name="citizen">Citizen</string>
    <string name="authenticator">Authenticator</string>
    <string name="validator">Validator</string>
    <string name="admin">Admin</string>
    <string name="check_pass">Check pass</string>
    <string name="valid_certificate">Valid Certificate</string>
    <string name="invalid_certificate">Invalid Certificate</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="all_certificates_validated">All certificates validated</string>
    <string name="refresh">Refresh</string>
    <string name="permissions">Permissions</string>
    <string name="update_permissions">Update permissions</string>
    <string name="other">Other</string>
    <string name="delete_user">Delete User</string>
    <string name="no_user_found">No user found</string>
    <string name="switch_access_type">Switch Access Type</string>
</resources>
