<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@android:color/white"
        android:isScrollContainer="false">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginEnd="@dimen/normal_margin"
                android:text="@string/registration"
                android:textSize="@dimen/splash_font_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.0"/>

        <EditText
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/usernameInput"
                android:background="@drawable/round_corners"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:hint="@string/user_name"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                android:layout_marginStart="64dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="64dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"/>

        <EditText
                android:id="@+id/firstNameInput"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/round_corners"
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="text"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintEnd_toEndOf="@+id/usernameInput"
                app:layout_constraintStart_toStartOf="@+id/usernameInput"
                app:layout_constraintTop_toBottomOf="@+id/usernameInput" />

        <EditText
                android:id="@+id/personalIDNrInput"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/round_corners"
                android:ems="10"
                android:hint="@string/personal_id_nr"
                android:inputType="text"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintEnd_toEndOf="@+id/emailInput"
                app:layout_constraintStart_toStartOf="@+id/emailInput"
                app:layout_constraintTop_toBottomOf="@+id/emailInput" />

        <EditText
                android:id="@+id/IDCardNumberInput"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/round_corners"
                android:ems="10"
                android:hint="@string/id_card_nr"
                android:inputType="text"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintEnd_toEndOf="@+id/personalIDNrInput"
                app:layout_constraintStart_toStartOf="@+id/personalIDNrInput"
                app:layout_constraintTop_toBottomOf="@+id/personalIDNrInput" />

        <EditText
                android:id="@+id/addressInput"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/round_corners"
                android:ems="10"
                android:hint="@string/address"
                android:inputType="text"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintEnd_toEndOf="@+id/IDCardNumberInput"
                app:layout_constraintStart_toStartOf="@+id/IDCardNumberInput"
                app:layout_constraintTop_toBottomOf="@+id/IDCardNumberInput" />

        <EditText
                android:id="@+id/lastNameInput"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/round_corners"
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="text"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintEnd_toEndOf="@+id/firstNameInput"
                app:layout_constraintStart_toStartOf="@+id/firstNameInput"
                app:layout_constraintTop_toBottomOf="@+id/firstNameInput" />

        <EditText
                android:id="@+id/emailInput"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/round_corners"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintEnd_toEndOf="@+id/lastNameInput"
                app:layout_constraintStart_toStartOf="@+id/lastNameInput"
                app:layout_constraintTop_toBottomOf="@+id/lastNameInput" />

        <EditText
                android:id="@+id/passwordInput"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/round_corners"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintEnd_toEndOf="@+id/addressInput"
                app:layout_constraintStart_toStartOf="@+id/addressInput"
                app:layout_constraintTop_toBottomOf="@+id/addressInput" />

        <androidx.cardview.widget.CardView
                android:id="@+id/profilePictureCardView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/passwordInput"
                app:layout_constraintStart_toStartOf="@+id/passwordInput"
                app:layout_constraintEnd_toEndOf="@+id/passwordInput"
                >

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:src="@tools:sample/avatars"
                    android:scaleType="centerCrop"
                    android:id="@+id/profilePicture"/>

            <TextView
                    android:text="@string/tap_to_add_profile_picture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/addPictureLabel"
                    android:layout_gravity="center"
                    app:layout_constraintStart_toStartOf="@+id/profilePicture"
                    app:layout_constraintEnd_toEndOf="@+id/profilePicture"
                    app:layout_constraintTop_toTopOf="@+id/profilePicture"
                    app:layout_constraintBottom_toBottomOf="@+id/profilePicture"
                    android:textAlignment="center"/>

        </androidx.cardview.widget.CardView>

        <Button
                android:text="@string/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/citizenButton"
                android:background="@drawable/buttonshape"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="@+id/profilePictureCardView"
                app:layout_constraintEnd_toEndOf="@+id/profilePictureCardView"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/profilePictureCardView"
                app:layout_constraintHorizontal_bias="0.483"/>

        <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/ic_arrow_back_black_24dp"
                android:background="@drawable/round_corners"
                android:id="@+id/backButton"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/citizenButton"
                app:layout_constraintStart_toStartOf="@+id/citizenButton"
                app:layout_constraintEnd_toEndOf="@+id/citizenButton"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>